--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,3 +254,25 @@ main > div {
     margin-top: 25px;
     line-height: 2em;
 }
+
+/* 
+==================================================================
+                                Subscribe
+==================================================================
+*/
+
+
+
+/* 
+==================================================================
+                                Footer
+==================================================================
+*/
+
+footer {
+    margin: 25px var(--main-padding);
+}
+
+footer img {
+    height: 1em;
+}
