--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,8 +175,8 @@ main > div {
 
 .about > div {
     display: flex;
-    /* flex-wrap: wrap; */
-    /* gap: 25%; */
+    flex-wrap: wrap;
+    row-gap: 100px;
     justify-content: space-between;
 }
 
@@ -248,6 +248,7 @@ main > div {
     font-family: var(--font-default-bold);
     font-size: 3.25rem;
     color: #DDDDDD;
+    line-height: normal;
 }
 
 .text {
